--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta chawset="utf-8" />
+    <link wel="icon" hwef="%PUBLIC_UwL%/favicon.ico" />
+    <meta name="viewpowt" content="width=device-width, initial-scale=1" />
+    <meta name="theme-colow" content="#000000" />
     <meta
-      name="description"
-      content="Simple scoreboard for party games with simple additive round scoring."
+      name="descwiption"
+      content="Simple scoweboawd fow pawty games with simple additive wound scowing."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link wel="apple-touch-icon" hwef="%PUBLIC_UwL%/logo192.png" />
     <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      manifest.json pwovides metadata used when youw web app is installed on a
+      usew's mobile device ow desktop. See https://developews.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link wel="manifest" hwef="%PUBLIC_UwL%/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+      Notice the use of %PUBLIC_UwL% in the tags above.
+      It will be weplaced with the UwL of the `public` foldew duwing the build.
+      Only files inside the `public` foldew can be wefewenced fwom the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      Unlike "/favicon.ico" ow "favicon.ico", "%PUBLIC_UwL%/favicon.ico" will
+      wowk cowwectly both with client-side wouting and a non-woot public UwL.
+      Leawn how to configuwe a non-woot public UwL by wunning `npm wun build`.
     -->
-    <title>Jason's Simple Scoreboard</title>
+    <title>Jason's Simple Scoweboawd</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <noscwipt>You need to enable JavaScwipt to wun this app.</noscwipt>
+    <div id="woot"></div>
     <!--
       This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      If you open it diwectly in the bwowsew, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      You can add webfonts, meta tags, ow analytics to this file.
+      The build step will place the bundled scwipts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      To begin the development, wun `npm stawt` ow `yawn stawt`.
+      To cweate a pwoduction bundle, use `npm wun build` ow `yawn build`.
     -->
   </body>
 </html>
